Adjust Figure 3 to Plasma colormap with larger fonts

--- a/Paper Plots.ipynb
+++ b/Paper Plots.ipynb
@@ -461,22 +461,29 @@
     "for k in range(Escale.shape[1]):\n",
     "    Escale[:, k] = E\n",
     "\n",
+    "caxes = []\n",
+    "    \n",
     "for i, var in enumerate(vars):\n",
     "    vmin = .01\n",
     "    vmax = 15\n",
     "    if var == 'Strue':\n",
-    "        im = axes[i].pcolor(epoch, E, (counts).mean(axis=((1, 2))).T, norm=LogNorm(vmin=vmin, vmax=vmax), cmap='jet')\n",
+    "        im = axes[i].pcolor(epoch, E, (counts).mean(axis=((1, 2))).T, norm=LogNorm(vmin=vmin, vmax=vmax), cmap='plasma')\n",
     "        axes[i].set_ylabel('$\\\\bf{Original~Ion~Data}$\\nEnergy [eV]', fontsize=18)\n",
     "    elif var == 'Srecon':\n",
-    "        im = axes[i].pcolor(epoch, E, (counts_recon).mean(axis=((1, 2))).T, norm=LogNorm(vmin=vmin, vmax=vmax), cmap='jet')\n",
+    "        im = axes[i].pcolor(epoch, E, (counts_recon).mean(axis=((1, 2))).T, norm=LogNorm(vmin=vmin, vmax=vmax), cmap='plasma')\n",
     "        axes[i].set_ylabel('$\\\\bf{Compressed~Ion~Data}$\\nEnergy [eV]', fontsize=18)\n",
     "    \n",
     "    axes[i].set_yscale('log')\n",
     "    divider = make_axes_locatable(axes[i])\n",
     "    cax = divider.append_axes('right', size='5%', pad=0.05)\n",
     "    fig.colorbar(im, cax=cax, orientation='vertical').set_label('Average Counts\\nper Energy Channel', fontsize=16)\n",
-    "\n",
+    "    caxes.append(cax)\n",
+    "    \n",
     "axes[0].set_title(f'Demonstration of Compression (Compression Ratio: {cmpr_ratio:.1f}X)', fontweight='bold', fontsize=20)\n",
+    "\n",
+    "for ax in axes.tolist() + caxes:\n",
+    "    ax.tick_params(axis='both', which='major', labelsize=14)\n",
+    "\n",
     "fig.tight_layout()"
    ]
   },
